# OurMoney

./: .sesskey  pyproject.toml
data/: shopping_list.db
src/: .sesskey  main.py
src/static/css/: style.css
